tests/fixtures/valid/multi/module_import_fn/src/lib/lib.gcl
// lib.gcl -- utility DAG
dag double {
    param x: Dimensionless;

    node result: Dimensionless = @x * 2.0;
}
